--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "todo-mvc",
+  "version": "0.0.1",
+  "description": "React playground",
+  "license": "MIT",
+  "author": "vantoozz@gmail.com",
+  "main": "dist/index.html",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "html-webpack-plugin": "^3.2.0",
-    "typescript": "^3.4.3",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open --hot"
   },
   "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "html-webpack-plugin": "^3.2.0",
+    "typescript": "^3.4.4",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
   }
 }
